--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "animals-emoji",
+  "name": "animals-emoji-search-react",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
